unpackaged/main/default/objects/Quote/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Account Pricing Manager</fullName>
            </value>
            <value>
                <fullName>Pending for Risk/Pricing Manager</fullName>
            </value>
            <value>
                <fullName>Pending for Pricing Department Manager</fullName>
            </value>
            <value>
                <fullName>Pending for Zone Executive Manager</fullName>
            </value>
            <value>
                <fullName>Pending for Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Pending for General Manager</fullName>
            </value>
            <value>
                <fullName>Approved by General Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by Account Pricing Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by Risk/Pricing Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by Pricing Department Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by Zone Executive Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by General Manager</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending with Head of pricing Team</fullName>
            </value>
            <value>
                <fullName>Approved with Head of pricing Team</fullName>
            </value>
            <value>
                <fullName>Rejected with Head of pricing Team</fullName>
            </value>
            <value>
                <fullName>Pending with Chief Commercial Officer</fullName>
            </value>
            <value>
                <fullName>Approved by Chief Commercial Officer</fullName>
            </value>
            <value>
                <fullName>Rejected by Chief Commercial Officer</fullName>
            </value>
            <value>
                <fullName>Pending with CEO</fullName>
            </value>
            <value>
                <fullName>Approved by CEO</fullName>
            </value>
            <value>
                <fullName>Rejected by CEO</fullName>
            </value>
            <value>
                <fullName>Pending with Investments Committee</fullName>
            </value>
            <value>
                <fullName>Approved by Investments Committee</fullName>
            </value>
            <value>
                <fullName>Rejected by Investments Committee</fullName>
            </value>
            <value>
                <fullName>Approved by Chief Transport &amp; Lease Officer</fullName>
            </value>
            <value>
                <fullName>Approved by Deputy CEO</fullName>
            </value>
            <value>
                <fullName>Approved by School Transport Executive Director</fullName>
            </value>
            <value>
                <fullName>Rejected by Chief Transport &amp; Lease Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>