unpackaged/main/default/objects/Quote/fields/Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period__c</fullName>
    <label>Contract Period</label>
    <summaryForeignKey>ET_Vehicle_Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>