unpackaged/main/default/objects/Quote/fields/ET_Pricing_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Service_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pricing Service Request</label>
    <referenceTo>ET_Pricing_Service_Request__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>