unpackaged/main/default/objects/Quote/fields/ET_Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>ET_Total_Investment__c</fullName>
    <description>Total Investment amount of all Vehicle lines</description>
    <label>Total Investment</label>
    <summarizedField>ET_Vehicle_Quote_Item__c.ET_Vehicle_Total_Investment__c</summarizedField>
    <summaryFilterItems>
        <field>ET_Vehicle_Quote_Item__c.ET_Vehicle_Source__c</field>
        <operation>equals</operation>
        <value>Main, Substitutional</value>
    </summaryFilterItems>
    <summaryForeignKey>ET_Vehicle_Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>