unpackaged/main/default/objects/Quote/fields/ET_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote for Approval</fullName>
            </value>
            <value>
                <fullName>Total Project Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>