unpackaged/main/default/objects/Quote/fields/GL_Location__c.field-meta.xml
<CustomField>
    <fullName>GL_Location__c</fullName>
    <formula>Opportunity.GL_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Location</label>
    <type>Text</type>
</CustomField>