unpackaged/main/default/objects/Quote/fields/Investment_Total__c.field-meta.xml
<CustomField>
    <fullName>Investment_Total__c</fullName>
    <label>Investment Total</label>
    <summarizedField>Financial_Analysis__c.Total_Investment__c</summarizedField>
    <summaryForeignKey>Financial_Analysis__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>