unpackaged/main/default/objects/Quote/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for activation and deactivation of Quote</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>