unpackaged/main/default/objects/Quote/fields/Quote_Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Investment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quote Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>