unpackaged/main/default/objects/Quote/fields/Service_Emirate__c.field-meta.xml
<CustomField>
    <fullName>Service_Emirate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Emirate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>