unpackaged/main/default/objects/Quote/fields/Total_Number_of_Other_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Other_Employees__c</fullName>
    <label>Total Number of Other Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>