unpackaged/main/default/objects/Quote/fields/Total_Number_of_Supervisors__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Supervisors__c</fullName>
    <label>Total Number of Supervisors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>