unpackaged/main/default/objects/Quote/fields/Total_Vehicle_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Vehicle_Lines__c</fullName>
    <label>Total Vehicle Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>