unpackaged/main/default/objects/Quote/fields/Trailer_current_purchase_price__c.field-meta.xml
<CustomField>
    <fullName>Trailer_current_purchase_price__c</fullName>
    <formula>TrailerCurrent_price__c *  Vehicle_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trailer current purchase price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>