unpackaged/main/default/objects/Quote/fields/Vehicle_total__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_total__c</fullName>
    <label>Vehicle total</label>
    <summarizedField>ET_Vehicle_Quote_Item__c.ET_Number_of_Vehicles__c</summarizedField>
    <summaryFilterItems>
        <field>ET_Vehicle_Quote_Item__c.Is_trailer_selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ET_Vehicle_Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>