unpackaged/main/default/objects/Quote/validationRules/ET_Inactive_Quote_Cannot_be_Accpeted.validationRule-meta.xml
<ValidationRule>
    <fullName>ET_Inactive_Quote_Cannot_be_Accpeted</fullName>
    <active>true</active>
    <errorConditionFormula>IF( !IsActive__c &amp;&amp; ISPICKVAL(Status , &#39;Accepted&#39;), true, false )</errorConditionFormula>
    <errorMessage>if quote is in active you can not mark Quote as accepted.</errorMessage>
</ValidationRule>