unpackaged/main/default/objects/Quote/validationRules/ET_Quote_Validation_for_Accepted_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>ET_Quote_Validation_for_Accepted_Quote</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
!(Opportunity.Legal_Contract_Status__c) &amp;&amp;  ISPICKVAL(Status ,&#39;Accepted&#39;) &amp;&amp; !(ISPICKVAL(Opportunity.StageName,&#39;Legal Contract&#39;)), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Quote can not be Accepted if Opportunity legal Contract is not Approved.</errorMessage>
</ValidationRule>