unpackaged/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>CreatedBy</columns>
    <columns>LastModifiedBy</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>