unpackaged/main/default/objects/Quote/listViews/Approved_Quotations.listView-meta.xml
<ListView>
    <fullName>Approved_Quotations</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Quotations</label>
    <sharedTo>
        <group>ET_Pricing_Team</group>
    </sharedTo>
</ListView>