unpackaged/main/default/objects/Quote/listViews/Draft_Quotations.listView-meta.xml
<ListView>
    <fullName>Draft_Quotations</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Quotations</label>
    <sharedTo>
        <group>ET_Pricing_Team</group>
    </sharedTo>
</ListView>