unpackaged/main/default/objects/Quote/listViews/mine.listView-meta.xml
<ListView>
    <fullName>mine</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>CreatedBy</columns>
    <filterScope>Mine</filterScope>
    <label>My Quotes</label>
</ListView>