unpackaged/main/default/objects/Quote/listViews/Quotations_Submitted_for_Approval.listView-meta.xml
<ListView>
    <fullName>Quotations_Submitted_for_Approval</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Next_Approval__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <label>Quotations Submitted for Approval</label>
    <sharedTo>
        <group>ET_Pricing_Team</group>
    </sharedTo>
</ListView>